--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,10 +2,12 @@
 <resources>
     <string name="app_name">Kerome</string>
 
-    <string name="go_home">Go Home</string>
-
     <string name="preference">Preference</string>
 
     <string name="help">Help</string>
     <string name="send">Send</string>
+    <string name="expected_time">Expected Time</string>
+    <string name="current_time">Current Time</string>
+    <string name="recipient">Recipient</string>
+    <string name="recipient_summary">Recipient mail address</string>
 </resources>
