--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,4 +13,13 @@
     <string name="intent_action_send">ACTION_SEND</string>
     <string name="intent_action_sendto">ACTION_SENDTO(sp-mode)</string>
     <string name="app_name">Kerome</string>
+    <string name="usual_quitting_time">Usual Quitting Time</string>
+    <string name="usual_quitting_time_summary">If the withdrawal was delayed by more than this time, adds a nice message.</string>
+    <string name="quitting_time_18">18:00</string>
+    <string name="quitting_time_19">19:00</string>
+    <string name="quitting_time_20">20:00</string>
+    <string name="quitting_time_21">21:00</string>
+    <string name="quitting_time_22">22:00</string>
+    <string name="quitting_time_23">23:00</string>
+    <string name="quitting_time_24">24:00</string>
 </resources>
