--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="preference">設定</string>
-    <string name="help">ヘルプ</string>
+    <string name="about">このアプリについて</string>
     <string name="send">送信</string>
     <string name="quitting_time">退社予定時刻</string>
     <string name="recipient">宛先</string>
