--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="preference">Preference</string>
 
-    <string name="help">Help</string>
+    <string name="about">About</string>
     <string name="send">Send</string>
     <string name="quitting_time">Quitting Time</string>
     <string name="recipient">Recipient</string>
@@ -22,4 +22,5 @@
     <string name="quitting_time_22">22:00</string>
     <string name="quitting_time_23">23:00</string>
     <string name="quitting_time_24">24:00</string>
+    <string name="about_message">Copyright 2011 noc All Rights Reserved.</string>
 </resources>
